# gpui-calc

./: Cargo.toml  LICENSE  README.md  build.rs
src/: app.rs  assets.rs  icon.rs  keybinds.rs  main.rs  state.rs  theme.rs  ui.rs  view.rs
src/app/: assets.rs  keybinds.rs  mod.rs  run.rs
src/state/: calculator.rs  entity.rs  event.rs  mod.rs  model.rs
src/ui/: components.rs  display.rs  keypad.rs  mod.rs  root.rs  theme.rs  titlebar.rs
src/ui/components/: button.rs  icon.rs  mod.rs  titlebar.rs
src/ui/titlebar/: mod.rs  other.rs  windows.rs
