[package]
name = "gpui-calc"
description = "GPUI Calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "75f8be6a0f711bd695cca04d89efa42c8108068c" }
anyhow = "1.0.86"
rust-embed = { version = "8.4.0", features = ["include-exclude"] }

[[bin]]
name = "gpui-calc"
path = "src/main.rs"

[package.metadata.bundle]
name = "GPUI Calculator"
identifier = "com.ndunnett.gpuicalc"
osx_minimum_system_version = "10.15.7"
