[package]
name = "gpui-calc"
description = "GPUI Calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "4270f89956b573512984c6bcbfb9544879381461" }
anyhow = "1.0.95"
rust-embed = { version = "8.5.0", features = ["include-exclude"] }

[[bin]]
name = "gpui-calc"
path = "src/main.rs"

[package.metadata.bundle]
name = "GPUI Calculator"
identifier = "com.ndunnett.gpuicalc"
osx_minimum_system_version = "10.15.7"
