[package]
name = "gpui-calc"
description = "GPUI Calculator"
version = "0.1.0"
edition = "2024"

[dependencies]
# latest commit of GPUI has dependency conflicts
# https://github.com/zed-industries/zed/issues/27288
gpui = { git = "https://github.com/zed-industries/zed", rev = "04d65cb3cd05c9ec8870288c65182cf096c68ee4" }
anyhow = "1.0.97"
rust-embed = { version = "8.6.0", features = ["include-exclude"] }

[[bin]]
name = "gpui-calc"
path = "src/main.rs"

[package.metadata.bundle]
name = "GPUI Calculator"
identifier = "com.ndunnett.gpuicalc"
osx_minimum_system_version = "10.15.7"
